[project]
name = "data-science-i"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gensim>=4.4.0",
    "ipykernel>=7.3.0",
    "jupyter-collaboration>=4.4.1",
    "jupyter-mcp-tools>=0.1.6",
    "jupyterlab>=4.6.1",
    "matplotlib>=3.11.0",
    "numpy>=2.5.1",
    "pandas>=3.0.3",
    "playwright>=1.61.0",
    "pycrdt>=0.13.1",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "tensorflow>=2.21.0",
    "torch>=2.13.0",
]
